src/riot-rs-macros/tests/ui/config_no_parameters.stderr
error: custom attribute panicked
 --> tests/ui/config_no_parameters.rs:9:1
  |
9 | #[riot_rs::config]
  | ^^^^^^^^^^^^^^^^^^
  |
  = help: message: a configuration kind must be specified
